--- a/css/privacidade.css
+++ b/css/privacidade.css
@@ -26,7 +26,7 @@
     border-radius: 25px;
     border: 5px solid #b49463;
     box-shadow: 0px 0px 10px #333;
-    background-image: url(/./img/fundoC.png);
+    background-color: #89704b;
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -68,7 +68,9 @@
     margin-top: 25px;
 }
 
-
+.textoPrivacidade{
+    margin-bottom: 100px !important;
+}
 
 
 
@@ -88,3 +90,5 @@
         font-size: 4vw !important;
     }
 }
+
+
