--- a/css/privacidade.css
+++ b/css/privacidade.css
@@ -15,6 +15,10 @@
 
 }
 
+li{
+    color: white;
+}
+
 .grid-privacidade{
     width: 85vw;
     min-height: 90vh;
@@ -54,10 +58,7 @@
 }
 
 
-.grid-dropdown{
-    display: flex;
-    justify-content: flex-end;
-}
+
 
 
 .return {
@@ -69,7 +70,7 @@
 }
 
 .textoPrivacidade{
-    margin-bottom: 100px !important;
+    margin-top: 50px !important;
 }
 
 
